--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,8 +78,8 @@ orbs:
           - run:
               name: Checking for changes
               command: |
-                if [ "${CIRCLE_BRANCH}" = "master" ]; then
-                  echo "Determinator does not run on master"
+                if [ "${CIRCLE_BRANCH}" = "v1.3" ]; then
+                  echo "Determinator does not run on release branch"
                   exit 0
                 fi
 
@@ -420,7 +420,7 @@ commands:
       - run:
           name: Send slack message
           command: |
-            if [ "${CIRCLE_BRANCH}" != "master" ]; then
+            if [ "${CIRCLE_BRANCH}" != "v1.3" ]; then
               exit 0
             fi
 
@@ -769,8 +769,6 @@ jobs:
     machine:
       image: ubuntu-1604:201903-01
     steps:
-      - build/determinator:
-          <<: *lte_build_verify
       - magma_integ_test:
           stack: lte
           test: 'False'
@@ -1076,12 +1074,11 @@ workflows:
   agw:
     jobs:
       - lte-test
-      - lte-integ-test:
-          <<: *master_and_develop
+      - agw-hold:
+          type: approval
       - lte-agw-deploy:
-          <<: *only_master
           requires:
-            - lte-integ-test
+            - agw-hold
 
   feg:
     jobs:
