[release] Set magma package version to preliminary release artifact
Signed-off-by: Jacky Tian <xjtian@fb.com>

--- a/lte/gateway/deploy/roles/ovs_deploy/tasks/main.yml
+++ b/lte/gateway/deploy/roles/ovs_deploy/tasks/main.yml
@@ -130,7 +130,7 @@
     dpkg_options: 'force-confold,force-confdef,force-overwrite'
   vars:
     packages:
-      - magma
+      - 'magma=1.3.0-1602100335-033bec15'
 
 - name: Start service openvswitch-switch.
   become: yes
