--- a/lte/gateway/deploy/roles/ovs_deploy/vars/all.yaml
+++ b/lte/gateway/deploy/roles/ovs_deploy/vars/all.yaml
@@ -1,14 +1,35 @@
-# ovs version on github default v2.8.1
-ovs_version: "v2.8.9"
-# Patches you want to apply
-packages:
-  - "oai-gtp_4.9-5_amd64.deb"
-  - "libopenvswitch_2.8.9-1_amd64.deb"
-  - "openvswitch-datapath-dkms_2.8.9-1_all.deb"
-  - "openvswitch-datapath-source_2.8.9-1_all.deb"
-  - "openvswitch-common_2.8.9-1_amd64.deb"
-  - "openvswitch-switch_2.8.9-1_amd64.deb"
+################################################################################
+# Copyright 2020 The Magma Authors.
 
-private_package: "deb http://packages.magma.etagecom.io stretch-stable main"
-source_name: "packages_magma_etagecom_io"
-apt_key: "http://packages.magma.etagecom.io/pubkey.gpg"
+# This source code is licensed under the BSD-style license found in the
+# LICENSE file in the root directory of this source tree.
+
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+################################################################################
+
+ovs_build_config:
+  # ovs version on github default v2.8.1
+  ovs_version: "v2.8.9"
+  # Patches you want to apply
+  packages:
+    - "oai-gtp_4.9-5_amd64.deb"
+    - "libopenvswitch_2.8.9-1_amd64.deb"
+    - "openvswitch-datapath-dkms_2.8.9-1_all.deb"
+    - "openvswitch-datapath-source_2.8.9-1_all.deb"
+    - "openvswitch-common_2.8.9-1_amd64.deb"
+    - "openvswitch-switch_2.8.9-1_amd64.deb"
+
+ovs_pkgrepo_proto: http
+ovs_pkgrepo_host: packages.magma.etagecom.io
+ovs_pkgrepo_path: ""
+ovs_pkgrepo_dist: stretch-stable
+ovs_pkgrepo_component: main
+ovs_pkgrepo_name: "ovs_package_repo"
+
+ovs_pkgrepo_key: "http://packages.magma.etagecom.io/pubkey.gpg"
+ovs_pkgrepo_key_fingerprint: ""
+ovs_use_pkgrepo: yes
