--- a/lte/gateway/deploy/roles/ovs_deploy/tasks/main.yml
+++ b/lte/gateway/deploy/roles/ovs_deploy/tasks/main.yml
@@ -130,7 +130,7 @@
     dpkg_options: 'force-confold,force-confdef,force-overwrite'
   vars:
     packages:
-      - 'magma=1.3.0-1602477016-723feee0'
+      - 'magma={{ magma_version }}'
 
 - name: Start service openvswitch-switch.
   become: yes
