[orc8r] Clean up github.com/facebookincubator/magma
Note: Magma has moved from github.com/facebookincubator to
github.com/magma.  Clean up all of the old references in the orc8r
code.  github.com/facebookincubator/magma currently points to
github.com/magma/magma so this is primarily cosmetic.

Signed-off-by: Michael Callahan <michaelcallahan@fb.com>

--- a/orc8r/cloud/helm/orc8r/charts/nms/Chart.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/nms/Chart.yaml
@@ -13,9 +13,9 @@ apiVersion: v1
 description: Magma NMS
 name: nms
 version: 0.1.7
-home: https://github.com/facebookincubator/magma
+home: https://github.com/magma/magma
 sources:
-  - https://github.com/facebookincubator/magma
+  - https://github.com/magma/magma
 keywords:
   - magma
   - nms
