fix naming in CMakelist and merge error in grpc_service.cpp
Signed-off-by: ashish-acl <ashish.t@altencalsoftlabs.com>

--- a/lte/gateway/c/oai/tasks/grpc_service/CMakeLists.txt
+++ b/lte/gateway/c/oai/tasks/grpc_service/CMakeLists.txt
@@ -15,11 +15,11 @@ generate_cpp_protos("${ORC8R_CPP_PROTOS}" "${PROTO_SRCS}"
   "${PROTO_HDRS}" ${ORC8R_PROTO_DIR} ${ORC8R_OUT_DIR})
 
 # AMF
-set(AMFSRV_LTE_CPP_PROTOS subscriberdb session_manager)
-set(AMFSRV_LTE_GRPC_PROTOS session_manager)
-generate_cpp_protos("${AMFSRV_LTE_CPP_PROTOS}" "${PROTO_SRCS}"
+set(AMFSRV_M5G_CPP_PROTOS subscriberdb session_manager)
+set(AMFSRV_M5G_GRPC_PROTOS session_manager)
+generate_cpp_protos("${AMFSRV_M5G_CPP_PROTOS}" "${PROTO_SRCS}"
   "${PROTO_HDRS}" ${LTE_PROTO_DIR} ${LTE_OUT_DIR})
-generate_grpc_protos("${AMFSRV_LTE_GRPC_PROTOS}" "${PROTO_SRCS}"
+generate_grpc_protos("${AMFSRV_M5G_GRPC_PROTOS}" "${PROTO_SRCS}"
   "${PROTO_HDRS}" ${LTE_PROTO_DIR} ${LTE_OUT_DIR})
 
 # SPGW
