--- a/orc8r/cloud/docker/docker-compose.yml
+++ b/orc8r/cloud/docker/docker-compose.yml
@@ -93,6 +93,8 @@ services:
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
+      - http.cors.enabled=true
+      - http.cors.allow-origin=https://app.elasticvue.com
     ports:
       - 9200:9200
       - 9300:9300
