Add Connection Tracking Service (#2318)
* Add Conntrack Controller to Pipelined

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Add Conntrack Controller to Pipelined

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Add connection tracking service

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Update connection tracker code

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Refactored the connection tracker code

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Make internal mac configurable

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix docker stuff

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Remove cwf files

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix typo

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix generated files

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Refactor connection tracking code

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Refactor eventtracker

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Add Connectiond to gateway mconfig

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Make yml string constants

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Remove extra grpc lib from compilation

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Install connection tracking service libraries

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Preburn magma vm

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix some build files

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Fix build file

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

* Add libs to build script

Signed-off-by: Nick Yurchenko <koolzz@fb.com>

--- a/lte/gateway/deploy/roles/magma/tasks/main.yml
+++ b/lte/gateway/deploy/roles/magma/tasks/main.yml
@@ -30,6 +30,7 @@
     # Manhattan services
     - lighttpd
     - sessiond
+    - connectiond
   when: full_provision
 
 - name: Copy sctpd service file
@@ -93,6 +94,10 @@
 
 - name: Create symlink for dpid binary
   file: src='{{ c_build }}/dpi/dpid' path=/usr/local/bin/dpid state=link force=yes follow=no
+  when: full_provision
+
+- name: Create symlink for connectiond binary
+  file: src='{{ c_build }}/connection_tracker/connectiond' path=/usr/local/bin/connectiond state=link force=yes follow=no
   when: full_provision
 
 - name: Create symlink for corefile collection script
