--- a/lte/gateway/configs/sessiond.yml
+++ b/lte/gateway/configs/sessiond.yml
@@ -57,6 +57,10 @@ sessions_table: sessiond:sessions
 # support is required
 converged_access: true
 
+#Session manager max resending throttle count when the UPF session info version is
+# not matching with UPF received version no.
+session_rtx_count: 3
+
 # Sets the amount of octets that will be requested on the CCR-I for credit if
 # credit is given. If unset, defaults to 200000
 default_requested_units: 200000
