--- a/lte/cloud/configs/lte.yml
+++ b/lte/cloud/configs/lte.yml
@@ -15,7 +15,7 @@ analytics:
     subscriber_attach_success_percent:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: reliability
       expr: round((sum by(gatewayID) (increase(ue_attach{action="attach_accept_sent"}[{{.Duration}}]))) * 100 / (sum by(gatewayID) (increase(ue_attach{action=~"attach_accept_sent|attach_reject_sent|attach_abort"}[{{.Duration}}]))))
@@ -23,7 +23,7 @@ analytics:
     subscriber_attach_reject_percent:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: reliability
       expr: round((sum by(gatewayID) (increase(ue_attach{action="attach_reject_sent"}[{{.Duration}}]))) * 100 / (sum by(gatewayID) (increase(ue_attach{action=~"attach_accept_sent|attach_reject_sent|attach_abort"}[{{.Duration}}]))))
@@ -31,7 +31,7 @@ analytics:
     subscriber_duplicate_attach_count:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: reliability
       expr: sum(increase(duplicate_attach_request[{{.Duration}}])) by (networkID, gatewayID)
@@ -39,7 +39,7 @@ analytics:
     service_request_success_percent:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: reliability
       expr: round((sum by(networkID) (increase(service_request{result="success"}[{{.Duration}}]))) *100 / ((sum by(networkID)(increase(service_request{result="failure"}[{{.Duration}}]))) + (sum by(networkID) (increase(service_request{ result="success"}[{{.Duration}}])))))
@@ -47,7 +47,7 @@ analytics:
     session_create_success_percent:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: reliability
       expr: round((sum by(networkID) (increase(mme_spgw_create_session_rsp{result="success"}[{{.Duration}}]) * 100)) / (sum by(networkID) (increase(mme_spgw_create_session_rsp[{{.Duration}}]))))
@@ -69,7 +69,7 @@ analytics:
     enodeb_throughput_dl:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: network
       expr: sum(increase(gtp_port_user_plane_dl_bytes[{{.Duration}}])) by (networkID, gatewayID, ip_addr)
@@ -84,7 +84,7 @@ analytics:
     enodeb_throughput_ul:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: network
       expr: sum(increase(gtp_port_user_plane_ul_bytes[{{.Duration}}])) by (networkID, gatewayID, ip_addr)
@@ -92,7 +92,7 @@ analytics:
     connected_ues:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: network
       expr: sum(ue_connected) by (gatewayID, networkID)
@@ -100,7 +100,7 @@ analytics:
     unique_subscribers:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: engagement
       expr: sum(group(ue_reported_usage) by (networkID, IMSI))
@@ -108,7 +108,7 @@ analytics:
     new_subscribers:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: engagement
       expr: sum(group(ue_reported_usage) by (IMSI)  unless group(ue_reported_usage offset 1d) by (IMSI))
@@ -116,7 +116,7 @@ analytics:
     subscriber_throughput:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: engagement
 
@@ -141,21 +141,21 @@ analytics:
     actual_subscriber:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: engagement
 
     active_sessions_apn:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: engagement
 
     configured_subscribers:
       register: false
       export: true
-      enforceMinThreshold: true
+      enforceMinUserThreshold: true
       labels:
         class: engagement
 
