Update orc8r deployment for version 1.4 (#4295)
Signed-off-by: Michael Germano <mgermano@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -501,7 +501,7 @@ jobs:
             python3 build.py -a --nocache --parallel
       - tag-push-docker:
           project: orc8r
-          images: "nginx|controller|base"
+          images: "nginx|controller"
       - persist-githash-version:
           file_prefix: orc8r
       - notify-magma:
