--- a/nms/app/package.json
+++ b/nms/app/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-fbt": "^0.10.4",
     "babel-plugin-fbt-runtime": "^0.9.9",
     "babel-plugin-lodash": "^3.3.4",
+    "axios": "^0.21.1",
     "fbt": "^0.10.6"
   },
   "devDependencies": {
