--- a/orc8r/cloud/configs/orchestrator.yml
+++ b/orc8r/cloud/configs/orchestrator.yml
@@ -103,18 +103,10 @@ analytics:
       labels:
         class: reliability
 
-    orc8r_error_count:
-      logConfig:
-        query: error
-      export: true
-      register: false
-      labels:
-        class: reliability
-
     orc8r_alertmanager_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-alertmanager
+          kubernetes.container_name: alertmanager
         query: error
       export: true
       register: false
@@ -124,7 +116,7 @@ analytics:
     orc8r_bootstrapper_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-bootstrapper
+          kubernetes.container_name: bootstrapper
         query: error
       export: true
       register: false
@@ -134,7 +126,7 @@ analytics:
     orc8r_certifier_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-certifier
+          kubernetes.container_name: certifier
         query: error
       export: true
       register: false
@@ -144,7 +136,7 @@ analytics:
     orc8r_configurator_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-configurator
+          kubernetes.container_name: configurator
         query: error
       export: true
       register: false
@@ -154,7 +146,7 @@ analytics:
     orc8r_cwf_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-cwf
+          kubernetes.container_name: cwf
         query: error
       export: true
       register: false
@@ -164,7 +156,7 @@ analytics:
     orc8r_device_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-device
+          kubernetes.container_name: device
         query: error
       export: true
       register: false
@@ -174,7 +166,7 @@ analytics:
     orc8r_directoryd_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-directoryd
+          kubernetes.container_name: directoryd
         query: error
       export: true
       register: false
@@ -184,7 +176,7 @@ analytics:
     orc8r_lte_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-lte
+          kubernetes.container_name: lte
         query: error
       export: true
       register: false
@@ -194,7 +186,7 @@ analytics:
     orc8r_ha_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-ha
+          kubernetes.container_name: ha
         query: error
       export: true
       register: false
@@ -204,7 +196,7 @@ analytics:
     orc8r_nginx_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-nginx
+          kubernetes.container_name: nginx
         query: error
       export: true
       register: false
@@ -214,7 +206,7 @@ analytics:
     orc8r_obsidian_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-obsidian
+          kubernetes.container_name: obsidian
         query: error
       export: true
       register: false
@@ -224,7 +216,7 @@ analytics:
     orc8r_orchestrator_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-orchestrator
+          kubernetes.container_name: orchestrator
         query: error
       export: true
       register: false
@@ -234,7 +226,7 @@ analytics:
     orc8r_policydb_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-policydb
+          kubernetes.container_name: policydb
         query: error
       export: true
       register: false
@@ -244,7 +236,7 @@ analytics:
     orc8r_smsd_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-smsd
+          kubernetes.container_name: smsd
         query: error
       export: true
       register: false
@@ -254,7 +246,7 @@ analytics:
     orc8r_subscriber_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-subscriberdb
+          kubernetes.container_name: subscriberdb
         query: error
       export: true
       register: false
@@ -264,21 +256,52 @@ analytics:
     orc8r_state_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-state
+          kubernetes.container_name: state
         query: error
       export: true
       register: false
       labels:
         class: reliability
-
-
 
     orc8r_service_error_count:
       logConfig:
         tags:
-          kubernetes.container_name: orc8r-service
+          kubernetes.container_name: service
         query: error
       export: true
       register: false
       labels:
         class: reliability
+
+    orc8r_metricsd_error_count:
+      logConfig:
+        tags:
+          kubernetes.container_name: metricsd
+        query: error
+      export: true
+      register: false
+      labels:
+        class: reliability
+
+    orc8r_prometheus_error_count:
+      logConfig:
+        tags:
+          kubernetes.container_name: prometheus
+        query: error
+      export: true
+      register: false
+      labels:
+        class: reliability
+
+    # state metrics
+    network_type:
+      register: false
+      export: true
+      labels:
+        class: network
+
+    gateway_version:
+      register: false
+      export: true
+      labels:
+        class: site
