[feg/gw] upgrade dockers to focal with py3.8
Signed-off-by: Ayelet Regev Dabah <ayelet.regev@gmail.com>

--- a/orc8r/gateway/docker/Dockerfile
+++ b/orc8r/gateway/docker/Dockerfile
@@ -43,11 +43,11 @@ RUN apt-get update && \
 COPY orc8r/tools/ansible/roles/pkgrepo/files/jfrog.pub /tmp/jfrog.pub
 COPY cwf/gateway/deploy/roles/ovs/files/magma-preferences /etc/apt/preferences.d/
 RUN apt-key add /tmp/jfrog.pub && \
-    apt-add-repository "deb https://facebookconnectivity.jfrog.io/artifactory/list/dev/ xenial main"
+    apt-add-repository "deb https://facebookconnectivity.jfrog.io/artifactory/list/dev-focal/ focal main"
 
 # Install python3.8 since it's not native on bionic
-#RUN apt-add-repository "ppa:deadsnakes/ppa"
-#RUN apt-get -y update && apt-get -y install python3.8
+RUN apt-add-repository "ppa:deadsnakes/ppa"
+RUN apt-get -y update && apt-get -y install python3.8
 
 # Install the runtime deps from apt.
 # TODO: magma-nghttpx=1.31.1-1 requires upgrade to ff.
