--- a/cwf/gateway/docker/python/Dockerfile
+++ b/cwf/gateway/docker/python/Dockerfile
@@ -2,12 +2,12 @@
 # Builder image for Magma proto files
 # -----------------------------------------------------------------------------
 FROM ubuntu:focal AS builder
-<<<<<<< HEAD
 
 # workaround to avoid interactive tzdata configurtaion
 ARG DEBIAN_FRONTEND=noninteractive
-=======
->>>>>>> [feg/gw] upgrade dockers to focal with py3.8
+
+# workaround to avoid interactive tzdata configurtaion
+ARG DEBIAN_FRONTEND=noninteractive
 
 # Install the runtime deps from apt.
 RUN apt-get -y update && apt-get -y install curl make virtualenv zip \
@@ -54,14 +54,13 @@ COPY orc8r/tools/ansible/roles/pkgrepo/files/jfrog.pub /tmp/jfrog.pub
 COPY cwf/gateway/deploy/roles/ovs/files/magma-preferences /etc/apt/preferences.d/
 # TODO: change repo to focal once there will be such
 RUN apt-key add /tmp/jfrog.pub && \
-
     apt-add-repository "deb https://facebookconnectivity.jfrog.io/artifactory/list/dev-focal/ focal main" && \
     apt-add-repository "deb http://archive.ubuntu.com/ubuntu/ focal-proposed restricted main multiverse universe"
 
  # Install python3.8 since it's not native on focal
 RUN apt-add-repository "ppa:deadsnakes/ppa"
 RUN apt-get -y update && apt-get -y install python3.8
-
+# TODO: change repo to focal once there will be such
 RUN apt-get -y update && apt-get -y install \
     curl \
     libc-ares2 \
