[cwf/feg/xwf] upgrade to focal with py3.8 (#4480)
* [orc8r][magmad] upgrade to focal with py3.8

Signed-off-by: Ayelet Regev Dabah <ayelet.regev@gmail.com>

* [feg/gw] upgrade dockers to focal with py3.8

Signed-off-by: Ayelet Regev Dabah <ayelet.regev@gmail.com>

* [feg/gw] upgrade dockers to focal with py3.8

Signed-off-by: Ayelet Regev Dabah <ayelet.regev@gmail.com>

--- a/feg/gateway/docker/python/Dockerfile
+++ b/feg/gateway/docker/python/Dockerfile
@@ -71,7 +71,8 @@ RUN apt-get update && \
 COPY orc8r/tools/ansible/roles/pkgrepo/files/jfrog.pub /tmp/jfrog.pub
 # TODO: change repo to focal once there will be such
 RUN apt-key add /tmp/jfrog.pub && \
-    apt-add-repository "deb https://facebookconnectivity.jfrog.io/artifactory/list/dev/ bionic main"
+    apt-add-repository "deb https://facebookconnectivity.jfrog.io/artifactory/list/dev-focal/ focal main"
+
 RUN curl -L http://packages.fluentbit.io/fluentbit.key > /tmp/fluentbit.key
 RUN apt-key add /tmp/fluentbit.key && \
     apt-add-repository "deb https://packages.fluentbit.io/ubuntu/focal focal main"
