[CI] Use machine executor for feg-prcommit in order to Buff up the machine
Signed-off-by: Timothée Dzik <timdzik@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -558,9 +558,10 @@ jobs:
       - magma_slack_notify
 
   feg-precommit:
-    docker:
-      - image: circleci/golang:1.13-stretch-node-browsers-legacy
-    resource_class: medium+
+    machine:
+      image: ubuntu-1604:201903-01
+      docker_layer_caching: true
+    resource_class: large
     environment:
       GO111MODULE: 'on'
     steps:
